# todo-rust-workers-backend

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  wrangler.toml
keto/: keto.yml
kratos/: admin.identity.json  kratos.yml  nginx.conf
oathkeeper/: oathkeeper.yml
oathkeeper/rules/: api.yml
src/: lib.rs
src/db/: keto.rs  kratos.rs  mod.rs  supabase.rs
src/handlers/: health.rs  mod.rs  todo_handler.rs  user_handler.rs
src/middleware/: auth.rs  cors.rs
src/models/: mod.rs  todo.rs  user.rs
src/repositories/: mod.rs  todo_repo.rs  user_repo.rs
src/utils/: auth.rs  context.rs  cors.rs  errors.rs  logging.rs  mod.rs
