[package]
name = "crab-worker"
version = "0.1.0"
edition = "2021"
authors = ["rafael <rafael@kodecraft.dev>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


uuid = { version = "1", features = ["v4", "js"] }
